refactor(participantChat): 참여자 과거 채팅 리스트 조회 리팩토링